--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@luckypear/react-native-thumbhash": "^1.0.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.10.1",
+    "@supabase/supabase-js": "^2.44.4",
+    "@tanstack/react-query": "^5.51.11",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
     "react-native-unistyles": "^2.8.4",
+    "react-native-url-polyfill": "^2.0.0",
     "valtio": "^1.13.2"
   },
   "devDependencies": {
